<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/dialog_stock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/dialog_hint"
        android:inputType="textCapCharacters"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">
        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cancel"
            android:textColor="@color/colorAccent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cd_cancel_add_new_stock"/>
        <Button
            android:id="@+id/bt_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_add"
            android:textColor="@drawable/button_selector"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cd_add_stock"
            android:enabled="false"/>
    </LinearLayout>

</LinearLayout>
